--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
-    "react-navigation": "^1.0.0-beta.13",
-    "styled-components": "^2.2.1"
+    "react-navigation": "^1.0.0-beta.13"
   }
 }
